--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,24 @@
             android:drawableLeft="@android:drawable/ic_media_next"
             android:onClick="onNext"
             android:id="@+id/button2" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:drawableLeft="@android:drawable/ic_lock_silent_mode_off"
+            android:onClick="onVolUp"
+            android:id="@+id/button4" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:drawableLeft="@android:drawable/ic_lock_silent_mode_off"
+            android:onClick="onVolDown"
+            android:id="@+id/button5" />
     </LinearLayout>
 
     <ListView
