--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -57,11 +57,27 @@
             android:drawableLeft="@android:drawable/ic_lock_silent_mode_off"
             android:onClick="onVolDown"
             android:id="@+id/button5" />
+
     </LinearLayout>
 
-    <ListView
-        android:id="@android:id/list"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Devices connected: "
+            android:id="@+id/textView2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/deviceCount" />
+    </LinearLayout>
 
 </LinearLayout>
