--- a/android/app/src/main/res/layout/widget_layout.xml
+++ b/android/app/src/main/res/layout/widget_layout.xml
@@ -60,7 +60,7 @@
         android:layout_width="48dp"
         android:layout_height="match_parent"
         android:id="@+id/button_sync"
-        android:src="@drawable/ic_sync_off"
+        android:src="@drawable/ic_sync"
         android:scaleType="centerCrop"
         android:layout_gravity="center_vertical" />
 
